# echo

./: .gitignore  README.md  WORKSPACE  echo.code-workspace
client/: BUILD.bazel  pom.xml
client/echoclient/: EchoClient.java
client/src/main/java/com/github/jianxx/echo/: EchoClient.java
client_cpp/: BUILD.bazel
client_cpp/src/: echo_client.cpp
client_java/: .project  BUILD.bazel  pom.xml
client_java/src/main/java/com/github/jianxx/echo/: EchoClient.java
client_java/src/test/java/com/github/jianxx/echo/: EchoClientTest.java
client_python/: BUILD.bazel
client_python/echo/: client.py
client_spring/: BUILD.bazel  pom.xml
client_spring/src/main/java/com/github/jianxx/echo/: EchoApplication.java
client_spring/src/main/java/com/github/jianxx/echo/controller/: EchoController.java
client_spring/src/test/java/com/github/jianxx/echo/controller/: EchoControllerIT.java  EchoControllerTest.java
proto/: BUILD.bazel  transceiver.proto  transmission_object.proto
server/: BUILD.bazel  go.mod  go.sum
server/echo/: transmission_object.pb.go
server/main/: echo_server.go
server_go/: BUILD.bazel  go.mod
server_go/cmd/echo_server/: echo_server.go
server_go/cmd/server/: main.go
server_go/internal/echo/: echo_server.go  echo_server_test.go
