load("@rules_java//java:defs.bzl", "java_binary", "java_test")

java_binary(
    name = "EchoClient",
    srcs = ["src/main/java/com/github/jianxx/echo/EchoClient.java"],
    main_class = "com.github.jianxx.echo.EchoClient",
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        "//proto:transceiver_java_proto",
        "//proto:transceiver_java_proto_grpc",
        "//proto:transmission_object_java_proto",
        "@io_grpc_grpc_java//api",
    ],
)

java_test(
    name = "EchoClientTest",
    srcs = glob(["src/test/**/*.java"]),
    deps = [
        ":EchoClient",
        "//proto:transceiver_java_proto",
        "//proto:transceiver_java_proto_grpc",
        "//proto:transmission_object_java_proto",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//core:inprocess",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
