load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_library(
    name = "EchoLibrary",
    srcs = glob(["src/main/**/*.java"]),
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
    ],
)

java_binary(
    name = "EchoClient",
    main_class = "com.github.jianxx.echo.EchoApplication",
    runtime_deps = [
        ":EchoLibrary",
    ],
)

java_test(
    name = "EchoClientTest",
    srcs = glob(["src/test/**/*.java"]),
    deps = [
        ":EchoLibrary",
        "//proto:transceiver_java_proto_grpc",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//core:inprocess",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
    ],
)
