load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library", "java_proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library", "go_proto_library")

proto_library(
    name = "transmission_object_proto",
    srcs = ["transmission_object.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "transmission_object_go_proto",
    importpath = "echo",
    visibility = ["//visibility:public"],
    deps = [":transmission_object_proto"],
)

java_proto_library(
    name = "transmission_object_java_proto",
    visibility = ["//visibility:public"],
    deps = [":transmission_object_proto"],
)

proto_library(
    name = "transceiver_proto",
    srcs = ["transceiver.proto"],
    deps = [
        ":transmission_object_proto",
    ],
)

go_grpc_library(
    name = "transceiver_go_proto_grpc",
    importpath = "echo",
    visibility = ["//server/echo_server:__pkg__"],
    deps = [":transceiver_proto"],
)

java_proto_library(
    name = "transceiver_java_proto",
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transceiver_proto"],
)

java_grpc_library(
    name = "transceiver_java_proto_grpc",
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transceiver_proto"],
)
