load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//java:defs.bzl", "java_grpc_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")
load("@rules_proto_grpc//rust:defs.bzl", "rust_grpc_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library")

proto_library(
    name = "transmission_object_proto",
    srcs = ["transmission_object.proto"],
    visibility = ["//visibility:public"],
)

proto_library(
    name = "transceiver_proto",
    srcs = ["transceiver.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":transmission_object_proto",
    ],
)

go_grpc_library(
    name = "transceiver_go_proto_grpc",
    importpath = "echo",
    protos = [
        ":transceiver_proto",
        ":transmission_object_proto",
    ],
    visibility = ["//visibility:public"],
)

java_grpc_library(
    name = "transceiver_java_proto_grpc",
    protos = [
        ":transceiver_proto",
        ":transmission_object_proto",
    ],
    visibility = ["//visibility:public"],
)

rust_grpc_library(
    name = "transceiver_rust_proto_grpc",
    protos = [
        ":transceiver_proto",
        ":transmission_object_proto",
    ],
    visibility = ["//visibility:public"],
)

python_grpc_library(
    name = "transceiver_python_proto_grpc",
    protos = [
        ":transceiver_proto",
        ":transmission_object_proto",
    ],
    visibility = ["//visibility:public"],
)
