load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "echo_server",
    srcs = ["internal/echo/echo_server.go"],
    importpath = "echo_server",
    deps = [
        "//proto:transceiver_go_proto_grpc",
        "//proto:transmission_object_go_proto",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "echo_server_test",
    srcs = [
        "internal/echo/echo_server.go",
        "internal/echo/echo_server_test.go",
    ],
    deps = [
        "//proto:transceiver_go_proto_grpc",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)

go_binary(
    name = "server",
    srcs = ["cmd/server/main.go"],
    deps = [
        ":echo_server",
        "//proto:transceiver_go_proto_grpc",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
